--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -121,4 +121,5 @@
     <string name="menu_share">Share</string>
     <string name="menu_send">Send</string>
     <string name="title_activity_nav_main">NavMainActivity</string>
+    <string name="title_activity_teste">TesteActivity</string>
 </resources>
