--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="menu_tools">Tools</string>
     <string name="menu_share">Share</string>
     <string name="menu_send">Send</string>
+    <string name="menu_navigation">Navigation</string>
     <string name="title_activity_nav_main">NavMainActivity</string>
     <string name="title_activity_teste">TesteActivity</string>
 </resources>
